feat: add endpoint /orders/{reference}/confirm to confirm order
